--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <h2>Experiment 1</h2>
     <ul>
         <li><a href="https://yohayt.github.io/Ethiopia_exp/ethiopia_coverage_map_50km_grid_4_1.html">Left</a></li>        
+        blabla
         <li><a href="https://yohayt.github.io/Ethiopia_exp/ethiopia_coverage_map_50km_grid_4_3.html">Middle</a></li>        
         <li><a href="https://yohayt.github.io/Ethiopia_exp/ethiopia_coverage_map_50km_grid_4_2.html">Right</a></li>
     </ul>
