--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         <li><a href="https://yohayt.github.io/Ethiopia_exp/ethiopia_coverage_map_50km_grid_3_2.html">Right</a></li>        
     </ul>
 
-    
+   <h2> More details </h2>    
+    <ul>
+        <li>href="https://yohayt.github.io/Ethiopia_exp/ ethiopia_coverage_district_names.html">District names</li>
+    </ul>
+        
 </body>
 </html>
