--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
    <h2> More details </h2>    
     <ul>
-        <li><a href="https://yohayt.github.io/Ethiopia_exp/distnames.html">District names</li>
+        <li><a href="https://yohayt.github.io/Ethiopia_exp/distnames.html">District names</a></li>
     </ul>
         
 </body>
