--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
    <h2> More details </h2>    
     <ul>
         <li><a href="https://yohayt.github.io/Ethiopia_exp/distnames.html">District names</a></li>
+        <li><a href="https://yohayt.github.io/Ethiopia_exp/existing.html">Existing facilities</a></li>
     </ul>
         
 </body>
